<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_img_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/click_to_edit_a_contact_swipe_to_delete"
            android:src="@drawable/ic_edit"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/item_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/item_img_edit"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="@string/txtname" />

        <TextView
            android:id="@+id/item_txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_txt_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="@string/txtphone" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>